welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:12: error: not found: value j
	setPos(i,j)
                 ^ColumnByColumn:14: error: not found: value j
	j += 1
        ^ColumnByColumn:18: error: not found: value j
		j = 0
                ^